fix: Address PR feedback - merge conflicts, hardcoded values, optional boto3, tests
## Changes

### 1. ✅ Merge Conflicts Resolved
- Rebased onto upstream/main (ONNX Runtime migration)
- Updated to use OnnxEmbedder instead of SentenceTransformer
- Updated requirements.txt to use onnxruntime, tokenizers, huggingface-hub

### 2. ✅ Fixed Hardcoded Values in docker-compose.yml
- Changed API_KEY from 'my-secret-key-123' to 'your-secret-key-here'
- Removed hardcoded path '/home/ubuntu/.openclaw/workspace/memory'
- Made workspace volume mounting optional with placeholder path

### 3. ✅ Made boto3 Optional (~80MB savings)
- Created requirements-cloud.txt with boto3 dependency
- Removed boto3 from core requirements.txt
- Updated Dockerfile with ARG ENABLE_CLOUD_SYNC=false
- Conditional installation of cloud dependencies in Docker build
- Added installation instructions to CLOUD_SYNC_README.md

### 4. ✅ Added Tests
- Created test_cloud_sync.py with 11 unit tests
- Tests cover CloudSync initialization, S3 operations, edge cases
- Mock boto3 to avoid requiring real S3 during testing
- All tests passing (test suite: OK)

### 5. ✅ Fixed Direct Attribute Access in app.py
- Added get_cloud_sync() and get_backup_dir() methods to MemoryEngine
- Updated all endpoints to use accessor methods instead of direct attributes
- Cleaner API, better encapsulation

## Test Results
```
Ran 11 tests in 0.009s
OK
```

Addresses all feedback from @divyekant's review.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,12 @@ services:
       - "8900:8000"
     volumes:
       - ./data:/data
-      - /home/ubuntu/.openclaw/workspace/memory:/workspace:ro
+      # Optional: Mount a directory containing text files to index
+      # - /path/to/your/documents:/workspace:ro
     environment:
       - DATA_DIR=/data
-      - WORKSPACE_DIR=/workspace
-      - API_KEY=my-secret-key-123
+      # - WORKSPACE_DIR=/workspace  # Uncomment if mounting documents
+      - API_KEY=your-secret-key-here
       - MODEL_NAME=all-MiniLM-L6-v2
       - MAX_BACKUPS=10
       # Cloud Sync (optional - uncomment to enable)
