--- a/docker-compose.snippet.yml
+++ b/docker-compose.snippet.yml
@@ -17,6 +17,11 @@ services:
       - API_KEY=              # Set to enable auth (e.g. API_KEY=my-secret-key)
       - MODEL_NAME=all-MiniLM-L6-v2
       - MAX_BACKUPS=10
+      # Extraction/runtime tuning (optional)
+      # - MAX_EXTRACT_MESSAGE_CHARS=120000
+      # - EXTRACT_MAX_INFLIGHT=2
+      # - MEMORY_TRIM_ENABLED=true
+      # - MEMORY_TRIM_COOLDOWN_SEC=15
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
