--- a/docker-compose.snippet.yml
+++ b/docker-compose.snippet.yml
@@ -7,6 +7,7 @@ services:
       target: ${FAISS_IMAGE_TARGET:-core}
       args:
         ENABLE_CLOUD_SYNC: ${ENABLE_CLOUD_SYNC:-false}
+        PRELOAD_MODEL: ${PRELOAD_MODEL:-false}
     image: faiss-memory:${FAISS_IMAGE_TARGET:-core}
     container_name: faiss-memory
     restart: unless-stopped
