--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     image: faiss-memory:${FAISS_IMAGE_TARGET:-core}
     container_name: faiss-memory
     restart: unless-stopped
+    mem_limit: ${FAISS_MEM_LIMIT:-3g}
     ports:
       - "8900:8000"
     volumes:
@@ -21,11 +22,16 @@ services:
       - API_KEY=${API_KEY:-}
       - MODEL_NAME=all-MiniLM-L6-v2
       - MAX_BACKUPS=10
+      # Allocator guardrails for lower steady-state RSS under bursty workloads
+      - MALLOC_ARENA_MAX=${MALLOC_ARENA_MAX:-2}
+      - MALLOC_TRIM_THRESHOLD_=${MALLOC_TRIM_THRESHOLD_:-131072}
+      - MALLOC_MMAP_THRESHOLD_=${MALLOC_MMAP_THRESHOLD_:-131072}
       # Extraction/runtime tuning (optional)
       # - MAX_EXTRACT_MESSAGE_CHARS=120000
       # - EXTRACT_MAX_INFLIGHT=2
       # - MEMORY_TRIM_ENABLED=true
       # - MEMORY_TRIM_COOLDOWN_SEC=15
+      # - MEMORY_TRIM_PERIODIC_SEC=5
       # Cloud Sync (optional - uncomment to enable)
       # - CLOUD_SYNC_ENABLED=true
       # - CLOUD_SYNC_BUCKET=my-faiss-memory
