--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "faiss-memory-mcp",
   "version": "2.0.0",
-  "description": "MCP server for FAISS Memory — semantic search, add, delete, browse",
+  "description": "MCP server for Memories — semantic search, add, delete, browse",
   "type": "module",
   "main": "index.js",
   "scripts": {
