--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ pydantic==2.9.0
 onnxruntime>=1.17.0
 tokenizers>=0.15.0
 huggingface-hub>=0.20.0
-faiss-cpu==1.8.0
-numpy==1.26.4
+qdrant-client==1.14.2
+numpy==1.26.4; python_version < "3.13"
+numpy>=2.1.0,<3; python_version >= "3.13"
 rank-bm25==0.2.2
