Add runtime extraction fallback and document behavior

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,11 @@ services:
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY:-}
       - OPENAI_API_KEY=${OPENAI_API_KEY:-}
       - OLLAMA_URL=${OLLAMA_URL:-}
+      - EXTRACT_FALLBACK_ADD=${EXTRACT_FALLBACK_ADD:-false}
+      - EXTRACT_FALLBACK_MAX_FACTS=${EXTRACT_FALLBACK_MAX_FACTS:-1}
+      - EXTRACT_FALLBACK_MIN_FACT_CHARS=${EXTRACT_FALLBACK_MIN_FACT_CHARS:-24}
+      - EXTRACT_FALLBACK_MAX_FACT_CHARS=${EXTRACT_FALLBACK_MAX_FACT_CHARS:-280}
+      - EXTRACT_FALLBACK_NOVELTY_THRESHOLD=${EXTRACT_FALLBACK_NOVELTY_THRESHOLD:-0.88}
       # Allocator guardrails for lower steady-state RSS under bursty workloads
       - MALLOC_ARENA_MAX=${MALLOC_ARENA_MAX:-2}
       - MALLOC_TRIM_THRESHOLD_=${MALLOC_TRIM_THRESHOLD_:-131072}
